# typing-speed-test

./: app.py  pyproject.toml
