[tool.poetry]
name = "typing-app"
version = "0.1.0"
description = ""
authors = ["Will Carpenter <willcarpenterwastaken@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sample-text = "^0.1.0"
faker = "^33.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
